--- a/two_player.html
+++ b/two_player.html
@@ -3,42 +3,19 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Silkscreen&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./public/style.css">
 </head>
 
 <body>
-  <div id="main">
-    <h1>TIC TAC TOE</h1>
-    <p id="ins">
-      Tap on the box to start<br><br>First Player starts as <b>Player X </b>And Second Player as <b>Player 0</b>
-    </p>
-    <br><br>
-    <div class="ui">
-        <div class="grid">
-            <div class="row">
-                <input type="text" id="b1" class="cell" onclick="makeMove('b1');" readonly>
-                <input type="text" id="b2" class="cell" onclick="makeMove('b2');" readonly>
-                <input type="text" id="b3" class="cell" onclick="makeMove('b3');" readonly>
-            </div>
-            <div class="row">
-                <input type="text" id="b4" class="cell" onclick="makeMove('b4');" readonly>
-                <input type="text" id="b5" class="cell" onclick="makeMove('b5');" readonly>
-                <input type="text" id="b6" class="cell" onclick="makeMove('b6');" readonly>
-            </div>
-            <div class="row">
-                <input type="text" id="b7" class="cell" onclick="makeMove('b7');" readonly>
-                <input type="text" id="b8" class="cell" onclick="makeMove('b8');" readonly>
-                <input type="text" id="b9" class="cell" onclick="makeMove('b9');" readonly>
-            </div>
-        </div>
-    </div>
-    <br><br><br>
-
-    <button id="but" onclick="resetGame()">
-      RESET
-    </button>
-    <br><br>
-    <p id="print"></p>
+  <h1>2 PLAYER MODE</h1>
+  <div class="menu-container">
+    <div class="board" id="board"></div>
+    <button class="reset-btn" onclick="resetGame()">Reset Game</button>
+    <div id="result"></div>
   </div>
   <script src="index.js"></script>
 </body>
